--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
   },
   "license": "ISC",
   "main": "index.js",
+  "browserslist": [
+    "defaults"
+  ],
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
     "css-loader": "^6.7.3",
     "mini-css-extract-plugin": "^2.7.5",
     "node-sass": "^8.0.0",
+    "postcss": "^8.2.15",
+    "postcss-loader": "^5.3.0",
     "sass": "^1.60.0",
     "sass-loader": "^13.2.2",
     "style-loader": "^3.3.2",
