--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   ],
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
     "mini-css-extract-plugin": "^2.7.5",
     "node-sass": "^8.0.0",
